--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -104,4 +104,113 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.nav {
+  background: #f55a5a;
+  width: 100%;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1.5em;
+}
+
+.nav h2 {
+  padding-left: 10px;
+}
+
+.nav h2 {
+  margin: 1.5em 0em;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 2rem;
+  line-height: 18px;
+  letter-spacing: -0.075em;
+}
+
+.card {
+  width: 75%;
+  margin: 45px 45px 40px 45px;
+  display: flex;
+  flex-wrap: wrap;
+  height: 30vh;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  flex: 1;
+}
+
+.continut {
+  flex-wrap: wrap;
+  flex: 1;
+}
+/* .cardcontainer {
+  flex: 1 1 300px;
+} */
+
+/* @media (max-width: 1100px) {
+  .cardcontainer {
+    display: inline;
+  }
+} */
+
+.poza {
+  width: 400px;
+  height: 300px;
+  margin-right: 15px;
+  border-radius: 10px;
+}
+
+.location {
+  display: flex;
+  align-items: center;
+}
+
+.location img {
+  margin-right: 5px;
+}
+.location h3 {
+  margin-right: 15px;
+}
+
+.location a {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 12px;
+  /* identical to box height */
+
+  text-decoration-line: underline;
+
+  color: #918e9b;
+}
+
+.card h1 {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  font-size: 2.5rem;
+  color: #2b283a;
+}
+
+.card h5 {
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 150%;
+  /* or 15px */
+
+  color: #2b283a;
 }
